--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.3.2
 gunicorn==20.1.0
-tensorflow-cpu==2.10.0  # Or tensorflow if GPU is available
+tensorflow-cpu==2.19.0
 numpy==1.23.5
 werkzeug==2.3.6
 pillow==9.5.0
